--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Девайс</title>
-  </head>
-  <body>
+    <head>
+        <meta charset="utf-8">
+        <title>HTML Academy: Девайс</title>
+    </head>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
-  </body>
+    <body>
+        <header class="main-header">
+            <nav class="navigation">
+                <ul class="navigation-list navigation-user">
+                    <li class="navigation-item">Войти</li>
+                    <li class="navigation-item">Сравнить</li>
+                    <li class="navigation-item">Корзина</li>
+                </ul>
+                <ul class="navigation-list">
+                    <li class="navigation-item">Каталог товаров</li>
+                    <li class="navigation-item">Доставка</li>
+                    <li class="navigation-item">Гарантия</li>
+                    <li class="navigation-item">Контакты</li>
+                </ul>
+            </nav>
+        </header>
+    </body>
 </html>
