Добавляет навигацию в хедере

--- a/index.html
+++ b/index.html
@@ -9,15 +9,34 @@
         <header class="main-header">
             <nav class="navigation">
                 <ul class="navigation-list navigation-user">
-                    <li class="navigation-item">Войти</li>
-                    <li class="navigation-item">Сравнить</li>
-                    <li class="navigation-item">Корзина</li>
+                    <li class="navigation-item">
+                        <a class="navigation-link" href="#">Войти</a>
+                    </li>
+                    <li class="navigation-item">
+                        <a class="navigation-link" href="#">Сравнить</a>
+                    </li>
+                    <li class="navigation-item">
+                        <a class="navigation-link" href="#">Корзина</a>
+                    </li>
                 </ul>
                 <ul class="navigation-list">
-                    <li class="navigation-item">Каталог товаров</li>
-                    <li class="navigation-item">Доставка</li>
-                    <li class="navigation-item">Гарантия</li>
-                    <li class="navigation-item">Контакты</li>
+                    <li class="navigation-item">
+                        <button class="button" type="button">Каталог товаров</button>
+                        <ul class="navigation-list navigation-catalog">
+                            <li class="navigation-item navigation-catalog-list">
+                                <a class="navigation-link" href="#">Виртуальная реальность</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="navigation-item">
+                        <a class="navigation-link" href="#">Доставка</a>
+                    </li>
+                    <li class="navigation-item">
+                        <a class="navigation-link" href="#">Гарантия</a>
+                    </li>
+                    <li class="navigation-item">
+                        <a class="navigation-link" href="#">Контакты</a>
+                    </li>
                 </ul>
             </nav>
         </header>
