--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </ul>
                 <ul class="navigation-list">
                     <li class="navigation-item">
-                        <button class="button" type="button">Каталог товаров</button>
+                        <a class="navigation-link button" href="catalog.html">Каталог товаров</a>
                         <ul class="navigation-list navigation-catalog">
                             <li class="navigation-item navigation-catalog-list">
                                 <a class="navigation-link" href="#">Виртуальная реальность</a>
