Добавляет меню в хедер

--- a/index.html
+++ b/index.html
@@ -21,10 +21,25 @@
                 </ul>
                 <ul class="navigation-list">
                     <li class="navigation-item">
-                        <a class="navigation-link button" href="catalog.html">Каталог товаров</a>
-                        <ul class="navigation-list navigation-catalog">
-                            <li class="navigation-item navigation-catalog-list">
+                        <a class="navigation-link button" href="#">Каталог товаров +</a>
+                        <ul class="navigation-list navigation-catalog-list">
+                            <li class="navigation-item navigation-catalog-item">
                                 <a class="navigation-link" href="#">Виртуальная реальность</a>
+                            </li>
+							<li class="navigation-item navigation-catalog-item">
+                                <a class="navigation-link" href="catalog.html">Моноподы для cелфи</a>
+                            </li>
+							<li class="navigation-item navigation-catalog-item">
+                                <a class="navigation-link" href="#">Экшн-камеры</a>
+                            </li>
+							<li class="navigation-item navigation-catalog-item">
+                                <a class="navigation-link" href="#">Фитнес-браслеты</a>
+                            </li>
+							<li class="navigation-item navigation-catalog-item">
+                                <a class="navigation-link" href="#">Умные часы</a>
+                            </li>
+							<li class="navigation-item navigation-catalog-item">
+                                <a class="navigation-link" href="#">Квадрокоптеры</a>
                             </li>
                         </ul>
                     </li>
