Добавляет форму поиска в хедер

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 
     <body>
         <header class="main-header">
+			<form class="search-form" action="https://echo.htmlacademy.ru/" method="get">
+				<label>
+					Текст поиска <input class="search-field" type="text" name="search">
+				</label>
+				<input type="submit" value="Найти">
+			</form>
             <nav class="navigation">
                 <ul class="navigation-list navigation-user">
                     <li class="navigation-item">
