--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <header class="main-header">
 			<form class="search-form" action="https://echo.htmlacademy.ru/" method="get">
 				<label>
-					Текст поиска <input class="search-field" type="text" name="search">
+					<input class="search-field" type="text" name="search" value="Текст поиска">
 				</label>
 				<input type="submit" value="Найти">
 			</form>
@@ -62,7 +62,54 @@
             </nav>
         </header>
 
-		<main></main>
+		<main>
+			<section class="slider-products">
+				<h1 class="visually-hidden">Примеры товаров</h1>
+				<ol сlass="slider-products-list">
+					<li class="slider-products-item">
+						<h2 class="visually-hidden">Квадрокоптер</h2>
+						<img class="slider-products-image" src="" alt="Квадрокоптер">
+						<button class="slider-button slider-prev" type="button">
+							<span class="visually-hidden">Предыдущий слайд</span>
+						</button>
+						<button class="slider-button slider-next" type="button">
+							<span class="visually-hidden">Следующий слайд</span>
+						</button>
+						<p>Порхает как бабочка, <br>жалит как пчела!</p>
+						<p>Этот обычный, на первый взгляд, квадрокоптер оснащен <br>мощным лазером, замаскированным под стандартную камеру.</p>
+						<a class="slider-product-link button" href="#">Подробнее</a>
+						<ol class="slider-pagination">
+							<li class="slider-pagination-item">
+								<button class="slider-pagination-button-current" type="button">
+									<span class="visually-hidden">Слайд 1</span>
+								</button>
+							</li>
+							<li class="slider-pagination-item">
+								<button class="slider-pagination-button" type="button">
+									<span class="visually-hidden">Слайд 2</span>
+								</button>
+							</li>
+							<li class="slider-pagination-item">
+								<button class="slider-pagination-button" type="button">
+									<span class="visually-hidden">Слайд 3</span>
+								</button>
+							</li>
+						</ol>
+						<table class="slider-product-table">
+							<tr>
+								<th>800 м</th>
+								<th>50 м</th>
+							</tr>
+							<tr>
+								<th>Дальность полета</th>
+								<th>Радиус поражения</th>
+							</tr>
+						</table>
+					</li>
+				</ol>
+
+			</section>
+		</main>
 
 		<footer></footer>
     </body>
