Корректирует таблицу в слайдере

--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
 							</li>
 						</ol>
 						<table class="slider-product-table">
-							<tr>
+							<tr class="slider-table-numbers">
 								<th>800 м</th>
 								<th>50 м</th>
 							</tr>
-							<tr>
+							<tr class="slider-table-text">
 								<th>Дальность полета</th>
 								<th>Радиус поражения</th>
 							</tr>
