Добавляет остальные слайды в слайдер

--- a/index.html
+++ b/index.html
@@ -97,12 +97,92 @@
 						</ol>
 						<table class="slider-product-table">
 							<tr class="slider-table-numbers">
-								<th>800 м</th>
-								<th>50 м</th>
+								<td>800 м</td>
+								<td>50 м</td>
 							</tr>
 							<tr class="slider-table-text">
-								<th>Дальность полета</th>
-								<th>Радиус поражения</th>
+								<td>Дальность полета</td>
+								<td>Радиус поражения</td>
+							</tr>
+						</table>
+					</li>
+					<li class="slider-products-item">
+						<h2 class="visually-hidden">Смарт часы</h2>
+						<img class="slider-products-image" src="" alt="Смарт часы">
+						<button class="slider-button slider-prev" type="button">
+							<span class="visually-hidden">Предыдущий слайд</span>
+						</button>
+						<button class="slider-button slider-next" type="button">
+							<span class="visually-hidden">Следующий слайд</span>
+						</button>
+						<p>Худеем <br>правильно!</p>
+						<p>Мотивирующие фитнес-браслеты помогут найти в себе силы <br>не пропускать занятия и соблюдать диету.</p>
+						<a class="slider-product-link button" href="#">Подробнее</a>
+						<ol class="slider-pagination">
+							<li class="slider-pagination-item">
+								<button class="slider-pagination-button" type="button">
+									<span class="visually-hidden">Слайд 1</span>
+								</button>
+							</li>
+							<li class="slider-pagination-item">
+								<button class="slider-pagination-button-current" type="button">
+									<span class="visually-hidden">Слайд 2</span>
+								</button>
+							</li>
+							<li class="slider-pagination-item">
+								<button class="slider-pagination-button" type="button">
+									<span class="visually-hidden">Слайд 3</span>
+								</button>
+							</li>
+						</ol>
+						<table class="slider-product-table">
+							<tr class="slider-table-numbers">
+								<td>48 часов</td>
+							</tr>
+							<tr class="slider-table-text">
+								<td>Без подзарядки</td>
+							</tr>
+						</table>
+					</li>
+					<li class="slider-products-item">
+						<h2 class="visually-hidden">Палка для селфи</h2>
+						<img class="slider-products-image" src="" alt="Палка для селфи">
+						<button class="slider-button slider-prev" type="button">
+							<span class="visually-hidden">Предыдущий слайд</span>
+						</button>
+						<button class="slider-button slider-next" type="button">
+							<span class="visually-hidden">Следующий слайд</span>
+						</button>
+						<p>Делай селфи, <br>как Бен Стиллер!</p>
+						<p>Самая длинная палка для селфи доступна в нашем магазине. <br>Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
+						<a class="slider-product-link button" href="#">Подробнее</a>
+						<ol class="slider-pagination">
+							<li class="slider-pagination-item">
+								<button class="slider-pagination-button" type="button">
+									<span class="visually-hidden">Слайд 1</span>
+								</button>
+							</li>
+							<li class="slider-pagination-item">
+								<button class="slider-pagination-button" type="button">
+									<span class="visually-hidden">Слайд 2</span>
+								</button>
+							</li>
+							<li class="slider-pagination-item">
+								<button class="slider-pagination-button-current" type="button">
+									<span class="visually-hidden">Слайд 3</span>
+								</button>
+							</li>
+						</ol>
+						<table class="slider-product-table">
+							<tr class="slider-table-numbers">
+								<td>48 часов</td>
+								<td>5 кг</td>
+								<td>Карбон</td>
+							</tr>
+							<tr class="slider-table-text">
+								<td>Длина палки</td>
+								<td>Вес палки</td>
+								<td>Материал</td>
 							</tr>
 						</table>
 					</li>
