Вносит изменения в слайдер

--- a/index.html
+++ b/index.html
@@ -95,16 +95,12 @@
 								</button>
 							</li>
 						</ol>
-						<table class="slider-product-table">
-							<tr class="slider-table-numbers">
-								<td>800 м</td>
-								<td>50 м</td>
-							</tr>
-							<tr class="slider-table-text">
-								<td>Дальность полета</td>
-								<td>Радиус поражения</td>
-							</tr>
-						</table>
+						<dl class="slider-product-characteristics">
+							<dt class="slider-product-characteristic">Дальность полета</dt>
+							<dd class="slider-product-value">800 м</dd>
+							<dt class="slider-product-characteristic">Радиус поражения</dt>
+							<dd class="slider-product-value">50 м</dd>
+						</dl>
 					</li>
 					<li class="slider-products-item">
 						<h2 class="visually-hidden">Смарт часы</h2>
@@ -135,14 +131,10 @@
 								</button>
 							</li>
 						</ol>
-						<table class="slider-product-table">
-							<tr class="slider-table-numbers">
-								<td>48 часов</td>
-							</tr>
-							<tr class="slider-table-text">
-								<td>Без подзарядки</td>
-							</tr>
-						</table>
+						<dl class="slider-product-characteristics">
+							<dt class="slider-product-characteristic">Без подзарядки</dt>
+							<dd class="slider-product-value">48 часов</dd>
+						</dl>
 					</li>
 					<li class="slider-products-item">
 						<h2 class="visually-hidden">Палка для селфи</h2>
@@ -173,18 +165,14 @@
 								</button>
 							</li>
 						</ol>
-						<table class="slider-product-table">
-							<tr class="slider-table-numbers">
-								<td>48 часов</td>
-								<td>5 кг</td>
-								<td>Карбон</td>
-							</tr>
-							<tr class="slider-table-text">
-								<td>Длина палки</td>
-								<td>Вес палки</td>
-								<td>Материал</td>
-							</tr>
-						</table>
+						<dl class="slider-product-characteristics">
+							<dt class="slider-product-characteristic">Длина палки</dt>
+							<dd class="slider-product-value">8,5 м</dd>
+							<dt class="slider-product-characteristic">Вес палки</dt>
+							<dd class="slider-product-value">5 кг</dd>
+							<dt class="slider-product-characteristic">Материал</dt>
+							<dd class="slider-product-value">Карбон</dd>
+						</dl>
 					</li>
 				</ol>
 
