Добавляет секцию категорий товаров

--- a/index.html
+++ b/index.html
@@ -175,7 +175,17 @@
 						</dl>
 					</li>
 				</ol>
+			</section>
 
+			<section class="categories">
+				<ul class="categories-list">
+					<li class="categories-item">Виртуальная реальность</li>
+					<li class="categories-item">Моноподы для селфи</li>
+					<li class="categories-item">Экшн-камеры</li>
+					<li class="categories-item">Фитнес-браслеты</li>
+					<li class="categories-item">Умные часы</li>
+					<li class="categories-item">Квадрокоптеры</li>
+				</ul>
 			</section>
 		</main>
 
