Добавляет блок с преимуществами

--- a/index.html
+++ b/index.html
@@ -63,11 +63,13 @@
         </header>
 
 		<main>
+			<h1 class="visually-hidden">Интернет-магазин «Девайс»</h1>
+
 			<section class="slider-products">
-				<h1 class="visually-hidden">Примеры товаров</h1>
+				<h2 class="visually-hidden">Примеры товаров</h2>
 				<ol сlass="slider-products-list">
 					<li class="slider-products-item">
-						<h2 class="visually-hidden">Квадрокоптер</h2>
+						<h3 class="visually-hidden">Квадрокоптер</h3>
 						<img class="slider-products-image" src="" alt="Квадрокоптер">
 						<button class="slider-button slider-prev" type="button">
 							<span class="visually-hidden">Предыдущий слайд</span>
@@ -103,7 +105,7 @@
 						</dl>
 					</li>
 					<li class="slider-products-item">
-						<h2 class="visually-hidden">Смарт часы</h2>
+						<h3 class="visually-hidden">Смарт часы</h3>
 						<img class="slider-products-image" src="" alt="Смарт часы">
 						<button class="slider-button slider-prev" type="button">
 							<span class="visually-hidden">Предыдущий слайд</span>
@@ -137,7 +139,7 @@
 						</dl>
 					</li>
 					<li class="slider-products-item">
-						<h2 class="visually-hidden">Палка для селфи</h2>
+						<h3 class="visually-hidden">Палка для селфи</h3>
 						<img class="slider-products-image" src="" alt="Палка для селфи">
 						<button class="slider-button slider-prev" type="button">
 							<span class="visually-hidden">Предыдущий слайд</span>
@@ -178,6 +180,7 @@
 			</section>
 
 			<section class="categories">
+				<h2 class="visually-hidden">Категории товаров</h2>
 				<ul class="categories-list">
 					<li class="categories-item">Виртуальная реальность</li>
 					<li class="categories-item">Моноподы для селфи</li>
@@ -185,6 +188,57 @@
 					<li class="categories-item">Фитнес-браслеты</li>
 					<li class="categories-item">Умные часы</li>
 					<li class="categories-item">Квадрокоптеры</li>
+				</ul>
+			</section>
+
+			<section class="advantages">
+				<h2 class="visually-hidden">Преимущества</h2>
+				<ul class="advantages-list">
+					<li class="advantages-item">
+						<h3 class="advantages-title">Доставка</h3>
+						<p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж</p>
+						<ol class="advantages-buttons-list">
+							<li class="advantages-buttons-item">
+								<button class="advantages-button advantages-button-current" type="button">Доставка</button>
+							</li>
+							<li class="advantages-buttons-item">
+								<button class="advantages-button" type="button">Гарантия</button>
+							</li>
+							<li class="advantages-buttons-item">
+								<button class="advantages-button" type="button">Кредит</button>
+							</li>
+						</ol>
+					</li>
+					<li class="propeties-item">
+						<h3 class="advantages-title">Гарантия</h3>
+						<p>Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
+						<ol class="advantages-buttons-list">
+							<li class="advantages-buttons-item">
+								<button class="advantages-button" type="button">Доставка</button>
+							</li>
+							<li class="advantages-buttons-item">
+								<button class="advantages-button advantages-button-current" type="button">Гарантия</button>
+							</li>
+							<li class="advantages-buttons-item">
+								<button class="advantages-button" type="button">Кредит</button>
+							</li>
+						</ol>
+					</li>
+					<li class="propeties-item">
+						<h3 class="advantages-title">Кредит</h3>
+						<p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
+						<ol class="advantages-buttons-list">
+							<li class="advantages-buttons-item">
+								<button class="advantages-button" type="button">Доставка</button>
+							</li>
+							<li class="advantages-buttons-item">
+								<button class="advantages-button" type="button">Гарантия</button>
+							</li>
+							<li class="advantages-buttons-item">
+								<button class="advantages-button  advantages-button-current" type="button">Кредит</button>
+							</li>
+						</ol>
+					</li>
 				</ul>
 			</section>
 		</main>
