Добавляет секцию доставки

--- a/index.html
+++ b/index.html
@@ -241,6 +241,11 @@
 					</li>
 				</ul>
 			</section>
+
+			<section class="delivery-to-order">
+				<h2 class="visually-hidden">Доставим редкий товар под заказ</h2>
+				<button class="delivery-to-order-button" type="button">Доставим редкий товар под заказ</button>
+			</section>
 		</main>
 
 		<footer></footer>
