Добавляет секцию О нас

--- a/index.html
+++ b/index.html
@@ -246,6 +246,18 @@
 				<h2 class="visually-hidden">Доставим редкий товар под заказ</h2>
 				<button class="delivery-to-order-button" type="button">Доставим редкий товар под заказ</button>
 			</section>
+
+			<section class="about-us">
+				<h2 class="about-us-title">О нас</h2>
+				<p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+				<p>Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
+				<ul class="delivery-company-list">
+					<li class="delivery-company-item">Меловые линии</li>
+					<li class="delivery-company-item">СДИК</li>
+					<li class="delivery-company-item">ТоксБерри</li>
+				</ul>
+				<a class="about-us-link" href="#">Подробнее о нас</a>
+			</section>
 		</main>
 
 		<footer></footer>
