--- a/index.html
+++ b/index.html
@@ -274,6 +274,16 @@
 				</ul>
 				<a class="contacts-link" href="#">Напишите нам</a>
 			</section>
+
+			<section class="subscribe">
+				<h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+				<p>Еженедельный дайджест с обзорами новинок, длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
+				<form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+					<label class="visually-hidden" for="subscribe-email">Ваш e-mail</label>
+					<input class="subscribe-email-field" id="subscribe-email" type="email" name="subscribe-email" placeholder="Ваш e-mail" required>
+					<button class="subscribe-button" type="button">Подписаться</button>
+				</form>
+			</section>
 		</main>
 
 		<footer></footer>
