--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <header class="main-header">
+        <header class="index-header">
 			<form class="search-form" action="https://echo.htmlacademy.ru/" method="get">
 				<label>
 					<input class="search-field" type="text" name="search" value="Текст поиска">
@@ -62,7 +62,7 @@
             </nav>
         </header>
 
-		<main>
+		<main class="index-main">
 			<h1 class="visually-hidden">Интернет-магазин «Девайс»</h1>
 
 			<section class="slider-products">
@@ -265,7 +265,7 @@
 				<h3 class="contacts-title">Интернет-магазин «Девайс»</h3>
 				<address class="contacts-adress">
 					<p class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
-					<a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+					<a class="contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
 				</address>
 				<h3 class="contacts-title">Время работы</h3>
 				<ul class="contacts-schedule-list">
@@ -286,6 +286,53 @@
 			</section>
 		</main>
 
-		<footer></footer>
+		<footer class="index-footer">
+			<section class="footer-contacts">
+				<h2 class="visually-hidden">Наши контакты</h2>
+				<p class="footer-contacts-address">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+			</section>
+
+			<section class="footer-navigation">
+				<h2 class="visually-hidden">Навигация</h2>
+				<ul class="footer-navigation-list">
+					<li class="footer-navigation-item">
+                        <a class="footer-navigation-link" href="#">Доставка</a>
+                    </li>
+                    <li class="footer-navigation-item">
+                        <a class="footer-navigation-link" href="#">Гарантия</a>
+                    </li>
+                    <li class="footer-navigation-item">
+                        <a class="footer-navigation-link" href="#">Контакты</a>
+                    </li>
+				</ul>
+			</section>
+
+			<section class="footer-social">
+				<h2 class="visually-hidden">Мы в социальных сетях</h2>
+				<ul class="footer-social-list">
+					<li class="footer-social-item">
+                        <a class="footer-social-link" href="#">Telegram</a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a class="footer-social-link" href="#">YouTube</a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a class="footer-social-link" href="#">Twitter</a>
+                    </li>
+				</ul>
+			</section>
+
+			<section class="footer-phone">
+				<h2 class="visually-hidden">Наш телефон</h2>
+				<a class="footer-phone-number" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
+			</section>
+
+			<section class="footer-htmlacademy">
+				<h2 class="visually-hidden">Сделано в HTML Academy</h2>
+				<a href="https://htmlacademy.ru/">
+					<span class="visually-hidden">.html academy</span>
+				</a>
+			</section>
+		</footer>
     </body>
 </html>
