Создает файл каталога и добавляет хедер

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <body>
         <header class="index-header">
+            <a class="catalog-header-link">
+                <img class="catalog-header-logo" src="" alt="Логотип интернет-магазина «Девайс»">
+            </a>
 			<form class="search-form" action="https://echo.htmlacademy.ru/" method="get">
 				<label>
 					<input class="search-field" type="text" name="search" value="Текст поиска">
