Добавляет футер страницы каталога

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     </head>
 
     <body>
-        <header class="index-header">
-            <a class="catalog-header-link">
-                <img class="catalog-header-logo" src="" alt="Логотип интернет-магазина «Девайс»">
+        <header class="page-header">
+            <a class="page-header-link">
+                <img class="page-header-logo" src="" alt="Логотип интернет-магазина «Девайс»">
             </a>
 			<form class="search-form" action="https://echo.htmlacademy.ru/" method="get">
 				<label>
@@ -19,7 +19,7 @@
             <nav class="navigation">
                 <ul class="navigation-list navigation-user">
                     <li class="navigation-item">
-                        <a class="navigation-link" href="#">Войти</a>
+                        <a class="navigation-link logged-out" href="#">Войти</a>
                     </li>
                     <li class="navigation-item">
                         <a class="navigation-link" href="#">Сравнить</a>
@@ -289,7 +289,7 @@
 			</section>
 		</main>
 
-		<footer class="index-footer">
+		<footer class="page-footer">
 			<section class="footer-contacts">
 				<h2 class="visually-hidden">Наши контакты</h2>
 				<p class="footer-contacts-address">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
