--- a/catalog.html
+++ b/catalog.html
@@ -5,9 +5,9 @@
         <title>Каталог</title>
     </head>
     <body>
-        <header class="catalog-header">
-            <a class="catalog-header-link" href="index.html">
-                <img class="catalog-header-logo" src="" alt="Логотип интернет-магазина «Девайс»">
+        <header class="page-header">
+            <a class="page-header-link" href="index.html">
+                <img class="page-header-logo" src="" alt="Логотип интернет-магазина «Девайс»">
             </a>
 			<form class="search-form" action="https://echo.htmlacademy.ru/" method="get">
 				<label>
@@ -18,7 +18,10 @@
             <nav class="navigation">
                 <ul class="navigation-list navigation-user">
                     <li class="navigation-item">
-                        <a class="navigation-link" href="#">Войти</a>
+                        <a class="navigation-link logged-in" href="#">Коля Петухов</a>
+                    </li>
+                    <li class="navigation-item">
+                        <a class="navigation-link" href="#">Выйти</a>
                     </li>
                     <li class="navigation-item">
                         <a class="navigation-link" href="#">Сравнить</a>
@@ -63,6 +66,57 @@
                 </ul>
             </nav>
         </header>
+
+        <main></main>
+
+        <footer class="page-footer">
+			<section class="footer-contacts">
+				<h2 class="visually-hidden">Наши контакты</h2>
+				<p class="footer-contacts-address">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+			</section>
+
+			<section class="footer-navigation">
+				<h2 class="visually-hidden">Навигация</h2>
+				<ul class="footer-navigation-list">
+					<li class="footer-navigation-item">
+                        <a class="footer-navigation-link" href="#">Доставка</a>
+                    </li>
+                    <li class="footer-navigation-item">
+                        <a class="footer-navigation-link" href="#">Гарантия</a>
+                    </li>
+                    <li class="footer-navigation-item">
+                        <a class="footer-navigation-link" href="#">Контакты</a>
+                    </li>
+				</ul>
+			</section>
+
+			<section class="footer-social">
+				<h2 class="visually-hidden">Мы в социальных сетях</h2>
+				<ul class="footer-social-list">
+					<li class="footer-social-item">
+                        <a class="footer-social-link" href="#">Telegram</a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a class="footer-social-link" href="#">YouTube</a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a class="footer-social-link" href="#">Twitter</a>
+                    </li>
+				</ul>
+			</section>
+
+			<section class="footer-phone">
+				<h2 class="visually-hidden">Наш телефон</h2>
+				<a class="footer-phone-number" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
+			</section>
+
+			<section class="footer-htmlacademy">
+				<h2 class="visually-hidden">Сделано в HTML Academy</h2>
+				<a href="https://htmlacademy.ru/">
+					<span class="visually-hidden">.html academy</span>
+				</a>
+			</section>
+		</footer>
 
     </body>
 </html>
