--- a/catalog.html
+++ b/catalog.html
@@ -67,7 +67,22 @@
             </nav>
         </header>
 
-        <main></main>
+        <main class="catalog-main">
+            <header class="catalog-header">
+                <h1 class="catalog-header-title">Моноподы для селфи</h1>
+                <ul class="breadcrumbs-list">
+                    <li class="breadcrumbs-item">
+                        <a class="breadcrumbs-link" href="index.html">Главная</a>
+                    </li>
+                    <li class="breadcrumbs-item">
+                        <a class="breadcrumbs-link" href="#">Каталог товаров</a>
+                    </li>
+                    <li class="breadcrumbs-item">
+                        <a class="breadcrumbs-link">Моноподы для селфи</a>
+                    </li>
+                </ul>
+            </header>
+        </main>
 
         <footer class="page-footer">
 			<section class="footer-contacts">
