Добавляет фильтр по bluetooth

--- a/catalog.html
+++ b/catalog.html
@@ -123,6 +123,24 @@
 						</ul>
 					</fieldset>
 
+					<fieldset class="catalog-filter-group">
+						<legend class="catalog-filter-title">Bluetooth</legend>
+						<ul class="catalog-filter-list">
+							<li class="catalog-filter-item">
+								<label class="control">
+									<input class="control-input" type="radio" name="bluetooth" value="yes" checked>
+									Есть
+								</label>
+							</li>
+							<li class="catalog-filter-item">
+								<label class="control">
+									<input class="control-input" type="radio" name="bluetooth" value="no">
+									Нет
+								</label>
+							</li>
+						</ul>
+					</fieldset>
+
 					<button class="button" type="submit">Показать</button>
 				</form>
 			</section>
