Добавляет блок сортировки товаров

--- a/catalog.html
+++ b/catalog.html
@@ -143,6 +143,20 @@
 
 					<button class="button" type="submit">Показать</button>
 				</form>
+
+				<h3 class="catalog-products-title">сортировка:</h3>
+				<select class="select-control"aria-label="Сортировка">
+					<option value="populat">Популярные</option>
+					<option value="cheap">Дешевые</option>
+					<option value="expensive">Дорогие</option>
+				</select>
+
+				<a href="#">
+					<span class="visually-hidden">По возрастанию</span>
+				</a>
+				<a href="#">
+					<span class="visually-hidden">По убыванию</span>
+				</a>
 			</section>
         </main>
 
