Вносит правки в блок сортировки товаров

--- a/catalog.html
+++ b/catalog.html
@@ -142,21 +142,22 @@
 					</fieldset>
 
 					<button class="button" type="submit">Показать</button>
-				</form>
 
-				<h3 class="catalog-products-title">сортировка:</h3>
-				<select class="select-control"aria-label="Сортировка">
-					<option value="populat">Популярные</option>
-					<option value="cheap">Дешевые</option>
-					<option value="expensive">Дорогие</option>
-				</select>
+                    <p>сортировка:</p>
+                    <select class="select-control" name="sorting">
+                        <option value="populat">Популярные</option>
+                        <option value="cheap">Дешевые</option>
+                        <option value="expensive">Дорогие</option>
+                    </select>
 
-				<a href="#">
-					<span class="visually-hidden">По возрастанию</span>
-				</a>
-				<a href="#">
-					<span class="visually-hidden">По убыванию</span>
-				</a>
+
+                    <a href="#">
+                        <span class="visually-hidden">По возрастанию</span>
+                    </a>
+                    <a href="#">
+                        <span class="visually-hidden">По убыванию</span>
+                    </a>
+                </form>
 			</section>
         </main>
 
