Добавляет блок с карточками товаров

--- a/catalog.html
+++ b/catalog.html
@@ -158,6 +158,40 @@
                         <span class="visually-hidden">По убыванию</span>
                     </a>
                 </form>
+
+                <ul class="product-card-list">
+                    <li class="product-card">
+                        <a class="prodyct-link" href="#">
+                            <img class="product-card-image" src="" alt="">
+                            <h3 class="product-card-title">Любительская селфи-палка</h3>
+                            <p class="product-card-price">500 ₽</p>
+                        </a>
+                    </li>
+                    <li class="product-card">
+                        <a class="prodyct-link" href="#">
+                            <img class="product-card-image" src="" alt="">
+                            <h3 class="product-card-title">Профессиональная селфи-палка</h3>
+                            <p class="product-card-price">1 500 ₽</p>
+                        </a>
+                    </li>
+                    <li class="product-card">
+                        <a class="prodyct-link" href="#">
+                            <img class="product-card-image" src="" alt="">
+                            <h3 class="product-card-title">Непотопляемая селфи-палка</h3>
+                            <p class="product-card-price">2 500 ₽</p>
+                        </a>
+                    </li>
+                    <li class="product-card">
+                        <a class="prodyct-link" href="#">
+                            <img class="product-card-image" src="" alt="">
+                            <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
+                            <p class="product-card-price">1 500 ₽</p>
+                        </a>
+                    </li>
+                </ul>
+
+                <ul class="pagination"></ul>
+
 			</section>
         </main>
 
