--- a/catalog.html
+++ b/catalog.html
@@ -190,8 +190,34 @@
                     </li>
                 </ul>
 
-                <ul class="pagination"></ul>
-
+                <button class="load-more button" type="button">Загрузить ещё</button>
+                <ul class="pagination">
+                    <li class="pagination-item">
+                        <a class="pagination-link pagination-back">
+                            <b>Назад</b>
+                        </a>
+                    </li>
+                    <li class="pagination-item">
+                        <a class="pagination-link pagination-link-current">1</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a class="pagination-link" href="#">2</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a class="pagination-link" href="#">3</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a class="pagination-link">...</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a class="pagination-link" href="#">15</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a class="pagination-link pagination-forward" href="#">
+                            <b>Вперёд</b>
+                        </a>
+                    </li>
+                </ul>
 			</section>
         </main>
 
