--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 				<label>
 					<input class="search-field" type="text" name="search" value="Текст поиска">
 				</label>
-				<input type="submit" value="Найти">
+                <button class="page-header-button button" type="button">Найти</button>
 			</form>
             <nav class="navigation">
                 <ul class="navigation-list navigation-user">
                     <li class="navigation-item">
-                        <a class="navigation-link logged-out" href="#">Войти</a>
+                        <a class="navigation-link log-in" href="#">Войти</a>
                     </li>
                     <li class="navigation-item">
                         <a class="navigation-link" href="#">Сравнить</a>
@@ -69,7 +69,7 @@
 			<h1 class="visually-hidden">Интернет-магазин «Девайс»</h1>
 
 			<section class="slider-products">
-				<h2 class="visually-hidden">Примеры товаров</h2>
+				<h2 class="visually-hidden">Слайды с товарами</h2>
 				<ol сlass="slider-products-list">
 					<li class="slider-products-item">
 						<h3 class="visually-hidden">Квадрокоптер</h3>
@@ -102,9 +102,13 @@
 						</ol>
 						<dl class="slider-product-characteristics">
 							<dt class="slider-product-characteristic">Дальность полета</dt>
-							<dd class="slider-product-value">800 м</dd>
+							<dd class="slider-product-value">
+                                <b>800 м</b>
+                            </dd>
 							<dt class="slider-product-characteristic">Радиус поражения</dt>
-							<dd class="slider-product-value">50 м</dd>
+							<dd class="slider-product-value">
+                                <b>50 м</b>
+                            </dd>
 						</dl>
 					</li>
 					<li class="slider-products-item">
@@ -138,7 +142,9 @@
 						</ol>
 						<dl class="slider-product-characteristics">
 							<dt class="slider-product-characteristic">Без подзарядки</dt>
-							<dd class="slider-product-value">48 часов</dd>
+							<dd class="slider-product-value">
+                                <b>48 часов</b>
+                            </dd>
 						</dl>
 					</li>
 					<li class="slider-products-item">
@@ -172,11 +178,17 @@
 						</ol>
 						<dl class="slider-product-characteristics">
 							<dt class="slider-product-characteristic">Длина палки</dt>
-							<dd class="slider-product-value">8,5 м</dd>
+							<dd class="slider-product-value">
+                                <b>8,5 м</b>
+                            </dd>
 							<dt class="slider-product-characteristic">Вес палки</dt>
-							<dd class="slider-product-value">5 кг</dd>
+							<dd class="slider-product-value">
+                                <b>5 кг</b>
+                            </dd>
 							<dt class="slider-product-characteristic">Материал</dt>
-							<dd class="slider-product-value">Карбон</dd>
+							<dd class="slider-product-value">
+                                <b>Карбон</b>
+                            </dd>
 						</dl>
 					</li>
 				</ol>
@@ -185,12 +197,24 @@
 			<section class="categories">
 				<h2 class="visually-hidden">Категории товаров</h2>
 				<ul class="categories-list">
-					<li class="categories-item">Виртуальная реальность</li>
-					<li class="categories-item">Моноподы для селфи</li>
-					<li class="categories-item">Экшн-камеры</li>
-					<li class="categories-item">Фитнес-браслеты</li>
-					<li class="categories-item">Умные часы</li>
-					<li class="categories-item">Квадрокоптеры</li>
+					<li class="categories-item">
+                        <b>Виртуальная реальность</b>
+                    </li>
+					<li class="categories-item">
+                        <b>Моноподы для селфи</b>
+                    </li>
+					<li class="categories-item">
+                        <b>Экшн-камеры</b>
+                    </li>
+					<li class="categories-item">
+                        <b>Фитнес-браслеты</b>
+                    </li>
+					<li class="categories-item">
+                        <b>Умные часы</b>
+                    </li>
+					<li class="categories-item">
+                        <b>Квадрокоптеры</b>
+                    </li>
 				</ul>
 			</section>
 
@@ -202,13 +226,13 @@
 						<p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж</p>
 						<ol class="advantages-buttons-list">
 							<li class="advantages-buttons-item">
-								<button class="advantages-button advantages-button-current" type="button">Доставка</button>
+								<button class="advantages-button advantages-button-current button" type="button">Доставка</button>
 							</li>
 							<li class="advantages-buttons-item">
-								<button class="advantages-button" type="button">Гарантия</button>
+								<button class="advantages-button button" type="button">Гарантия</button>
 							</li>
 							<li class="advantages-buttons-item">
-								<button class="advantages-button" type="button">Кредит</button>
+								<button class="advantages-button button" type="button">Кредит</button>
 							</li>
 						</ol>
 					</li>
@@ -217,13 +241,13 @@
 						<p>Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
 						<ol class="advantages-buttons-list">
 							<li class="advantages-buttons-item">
-								<button class="advantages-button" type="button">Доставка</button>
+								<button class="advantages-button button" type="button">Доставка</button>
 							</li>
 							<li class="advantages-buttons-item">
-								<button class="advantages-button advantages-button-current" type="button">Гарантия</button>
+								<button class="advantages-button advantages-button-current button" type="button">Гарантия</button>
 							</li>
 							<li class="advantages-buttons-item">
-								<button class="advantages-button" type="button">Кредит</button>
+								<button class="advantages-button button" type="button">Кредит</button>
 							</li>
 						</ol>
 					</li>
@@ -232,13 +256,13 @@
 						<p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
 						<ol class="advantages-buttons-list">
 							<li class="advantages-buttons-item">
-								<button class="advantages-button" type="button">Доставка</button>
+								<button class="advantages-button button" type="button">Доставка</button>
 							</li>
 							<li class="advantages-buttons-item">
-								<button class="advantages-button" type="button">Гарантия</button>
+								<button class="advantages-button button" type="button">Гарантия</button>
 							</li>
 							<li class="advantages-buttons-item">
-								<button class="advantages-button  advantages-button-current" type="button">Кредит</button>
+								<button class="advantages-button  advantages-button-current button" type="button">Кредит</button>
 							</li>
 						</ol>
 					</li>
@@ -247,7 +271,7 @@
 
 			<section class="delivery-to-order">
 				<h2 class="visually-hidden">Доставим редкий товар под заказ</h2>
-				<button class="delivery-to-order-button" type="button">Доставим редкий товар под заказ</button>
+				<button class="delivery-to-order-button button" type="button">Доставим редкий товар под заказ</button>
 			</section>
 
 			<section class="about-us">
@@ -255,11 +279,17 @@
 				<p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
 				<p>Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
 				<ul class="delivery-company-list">
-					<li class="delivery-company-item">Меловые линии</li>
-					<li class="delivery-company-item">СДИК</li>
-					<li class="delivery-company-item">ТоксБерри</li>
+					<li class="delivery-company-item">
+                        <b>Меловые линии</b>
+                    </li>
+					<li class="delivery-company-item">
+                        <b>СДИК</b>
+                    </li>
+					<li class="delivery-company-item">
+                        <b>ТоксБерри</b>
+                    </li>
 				</ul>
-				<a class="about-us-link" href="#">Подробнее о нас</a>
+				<a class="about-us-link button" href="#">Подробнее о нас</a>
 			</section>
 
 			<section class="contacts">
@@ -275,7 +305,7 @@
 					<li class="contacts-schedule-item">пн—пт: с 10:00 до 22:00</li>
 					<li class="contacts-schedule-item">сб—вс: с 10:00 до 19:00</li>
 				</ul>
-				<a class="contacts-link" href="#">Напишите нам</a>
+				<a class="contacts-link button" href="#">Напишите нам</a>
 			</section>
 
 			<section class="subscribe">
@@ -284,14 +314,18 @@
 				<form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
 					<label class="visually-hidden" for="subscribe-email">Ваш e-mail</label>
 					<input class="subscribe-email-field" id="subscribe-email" type="email" name="subscribe-email" placeholder="Ваш e-mail" required>
-					<button class="subscribe-button" type="button">Подписаться</button>
+					<button class="subscribe-button button" type="button">Подписаться</button>
 				</form>
+                <p>Это бесплатно</p>
 			</section>
 		</main>
 
 		<footer class="page-footer">
 			<section class="footer-contacts">
 				<h2 class="visually-hidden">Наши контакты</h2>
+                <a class="page-header-link">
+                    <img class="page-header-logo" src="" alt="Логотип интернет-магазина «Девайс»">
+                </a>
 				<p class="footer-contacts-address">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
 			</section>
 
@@ -314,13 +348,13 @@
 				<h2 class="visually-hidden">Мы в социальных сетях</h2>
 				<ul class="footer-social-list">
 					<li class="footer-social-item">
-                        <a class="footer-social-link" href="#">Telegram</a>
+                        <a class="footer-social-link button" href="#">Telegram</a>
                     </li>
                     <li class="footer-social-item">
-                        <a class="footer-social-link" href="#">YouTube</a>
+                        <a class="footer-social-link button" href="#">YouTube</a>
                     </li>
                     <li class="footer-social-item">
-                        <a class="footer-social-link" href="#">Twitter</a>
+                        <a class="footer-social-link button" href="#">Twitter</a>
                     </li>
 				</ul>
 			</section>
