--- a/catalog.html
+++ b/catalog.html
@@ -2,8 +2,9 @@
 <html lang="ru">
     <head>
         <meta charset="utf-8">
-        <title>Каталог</title>
+        <title>HTML Academy: Девайс Каталог</title>
     </head>
+
     <body>
         <header class="page-header">
             <a class="page-header-link" href="index.html">
@@ -13,7 +14,7 @@
 				<label>
 					<input class="search-field" type="text" name="search" value="Текст поиска">
 				</label>
-				<input type="submit" value="Найти">
+				<button class="page-header-button button" type="button">Найти</button>
 			</form>
             <nav class="navigation">
                 <ul class="navigation-list navigation-user">
@@ -21,7 +22,7 @@
                         <a class="navigation-link logged-in" href="#">Коля Петухов</a>
                     </li>
                     <li class="navigation-item">
-                        <a class="navigation-link" href="#">Выйти</a>
+                        <a class="navigation-link log-out" href="#">Выйти</a>
                     </li>
                     <li class="navigation-item">
                         <a class="navigation-link" href="#">Сравнить</a>
@@ -78,7 +79,7 @@
                         <a class="breadcrumbs-link" href="#">Каталог товаров</a>
                     </li>
                     <li class="breadcrumbs-item">
-                        <a class="breadcrumbs-link">Моноподы для селфи</a>
+                        <a class="breadcrumbs-link breadcrumbs-link-current">Моноподы для селфи</a>
                     </li>
                 </ol>
             </header>
@@ -141,48 +142,48 @@
 						</ul>
 					</fieldset>
 
-					<button class="button" type="submit">Показать</button>
+					<button class="catalog-products-button button" type="submit">Показать</button>
 
                     <p>сортировка:</p>
                     <select class="select-control" name="sorting">
-                        <option value="populat">Популярные</option>
+                        <option value="popular">Популярные</option>
                         <option value="cheap">Дешевые</option>
                         <option value="expensive">Дорогие</option>
                     </select>
 
 
-                    <a href="#">
+                    <a class="button" href="#">
                         <span class="visually-hidden">По возрастанию</span>
                     </a>
-                    <a href="#">
+                    <a class="button" href="#">
                         <span class="visually-hidden">По убыванию</span>
                     </a>
                 </form>
 
                 <ul class="product-card-list">
-                    <li class="product-card">
-                        <a class="prodyct-link" href="#">
+                    <li class="product-card-item">
+                        <a class="product-card-link" href="#">
                             <img class="product-card-image" src="" alt="">
                             <h3 class="product-card-title">Любительская селфи-палка</h3>
                             <p class="product-card-price">500 ₽</p>
                         </a>
                     </li>
-                    <li class="product-card">
-                        <a class="prodyct-link" href="#">
+                    <li class="product-card-item">
+                        <a class="product-card-link" href="#">
                             <img class="product-card-image" src="" alt="">
                             <h3 class="product-card-title">Профессиональная селфи-палка</h3>
                             <p class="product-card-price">1 500 ₽</p>
                         </a>
                     </li>
-                    <li class="product-card">
-                        <a class="prodyct-link" href="#">
+                    <li class="product-card-item">
+                        <a class="product-card-link" href="#">
                             <img class="product-card-image" src="" alt="">
                             <h3 class="product-card-title">Непотопляемая селфи-палка</h3>
                             <p class="product-card-price">2 500 ₽</p>
                         </a>
                     </li>
-                    <li class="product-card">
-                        <a class="prodyct-link" href="#">
+                    <li class="product-card-item">
+                        <a class="product-card-link" href="#">
                             <img class="product-card-image" src="" alt="">
                             <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
                             <p class="product-card-price">1 500 ₽</p>
@@ -224,6 +225,9 @@
         <footer class="page-footer">
 			<section class="footer-contacts">
 				<h2 class="visually-hidden">Наши контакты</h2>
+                <a class="page-header-link">
+                    <img class="page-header-logo" src="" alt="Логотип интернет-магазина «Девайс»">
+                </a>
 				<p class="footer-contacts-address">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
 			</section>
 
@@ -246,13 +250,13 @@
 				<h2 class="visually-hidden">Мы в социальных сетях</h2>
 				<ul class="footer-social-list">
 					<li class="footer-social-item">
-                        <a class="footer-social-link" href="#">Telegram</a>
+                        <a class="footer-social-link button" href="#">Telegram</a>
                     </li>
                     <li class="footer-social-item">
-                        <a class="footer-social-link" href="#">YouTube</a>
+                        <a class="footer-social-link button" href="#">YouTube</a>
                     </li>
                     <li class="footer-social-item">
-                        <a class="footer-social-link" href="#">Twitter</a>
+                        <a class="footer-social-link button" href="#">Twitter</a>
                     </li>
 				</ul>
 			</section>
@@ -269,6 +273,5 @@
 				</a>
 			</section>
 		</footer>
-
     </body>
 </html>
