Подключает контентные изображения к главной странице

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <header class="page-header">
             <a class="page-header-link">
-                <img class="page-header-logo" src="" alt="Логотип интернет-магазина «Девайс»">
+                <img class="page-header-logo" src="./images/header/header-logo.svg" width="145" height="36" alt="Логотип интернет-магазина «Девайс»">
             </a>
 			<form class="search-form" action="https://echo.htmlacademy.ru/" method="get">
 				<label>
@@ -73,7 +73,7 @@
 				<ol сlass="slider-products-list">
 					<li class="slider-products-item">
 						<h3 class="visually-hidden">Квадрокоптер</h3>
-						<img class="slider-products-image" src="" alt="Квадрокоптер">
+						<img class="slider-products-image" src="./images/main/slider-1.png" width="560" height="560" alt="Квадрокоптер">
 						<button class="slider-button slider-prev" type="button">
 							<span class="visually-hidden">Предыдущий слайд</span>
 						</button>
@@ -113,7 +113,7 @@
 					</li>
 					<li class="slider-products-item">
 						<h3 class="visually-hidden">Смарт часы</h3>
-						<img class="slider-products-image" src="" alt="Смарт часы">
+						<img class="slider-products-image" src="./images/main/slider-2.png" width="560" height="560" alt="Смарт часы">
 						<button class="slider-button slider-prev" type="button">
 							<span class="visually-hidden">Предыдущий слайд</span>
 						</button>
@@ -149,7 +149,7 @@
 					</li>
 					<li class="slider-products-item">
 						<h3 class="visually-hidden">Палка для селфи</h3>
-						<img class="slider-products-image" src="" alt="Палка для селфи">
+						<img class="slider-products-image" src="./images/main/slider-3.png" width="560" height="560" alt="Палка для селфи">
 						<button class="slider-button slider-prev" type="button">
 							<span class="visually-hidden">Предыдущий слайд</span>
 						</button>
@@ -324,7 +324,7 @@
 			<section class="footer-contacts">
 				<h2 class="visually-hidden">Наши контакты</h2>
                 <a class="page-header-link">
-                    <img class="page-header-logo" src="" alt="Логотип интернет-магазина «Девайс»">
+                    <img class="page-header-logo" src="./images/footer/footer-logo.svg" width="145" height="36" alt="Логотип интернет-магазина «Девайс»">
                 </a>
 				<p class="footer-contacts-address">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
 			</section>
@@ -367,6 +367,7 @@
 			<section class="footer-htmlacademy">
 				<h2 class="visually-hidden">Сделано в HTML Academy</h2>
 				<a href="https://htmlacademy.ru/">
+                    <img src="./images/footer/html-academy-logo.svg" width="115" height="33" alt="Логотип HTML Academy">
 					<span class="visually-hidden">.html academy</span>
 				</a>
 			</section>
